[package]
name = "hyper"
version = "0.1.0"
edition = "2021"


[dependencies]
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
hyper-rustls = "0.22"

bytes = "1.2"

serde_urlencoded = "0.7" 

# Tokio for async runtime
tokio = { version = "1", features = ["full"] }

# Multipart for handling form data
multipart = "0.18"

# Serde for serializing/deserializing JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
