[package]
name = "reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["multipart", "rustls-tls"] }

hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
hyper-rustls = "0.22"

bytes = "1.2"

serde_urlencoded = "0.7" 

# Tokio for async runtime
tokio = { version = "1", features = ["full"] }

# Multipart for handling form data
multipart = { version ="0.18",features = ["client"]}

# Serde for serializing/deserializing JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multipart-async = "0.0.2"


